<resources>
    <!-- GENERAL STRINGS -->
    <string name="app_name" translatable="false">FMEA Manager</string>
    <string name="main_fmea" translatable="false">FMEA</string>
    <string name="main_manager" translatable="false">MANAGER</string>
    <string name="Doe" translatable="false">DOE</string>
    <string name="John" translatable="false">John</string>
    <string name="back_over">FINISH NOW ?</string>

    <!-- TOOLBAR -->
    <string name="Toolbar_ADD" translatable="false">ADD</string>
    <string name="Toolbar_SEARCH" translatable="false">SEARCH</string>
    <string name="Toolbar_NEW_PROCESSUS" translatable="false">NEW PROCESSUS</string>
    <string name="Toolbar_NEW_RISK" translatable="false">NEW RISK</string>
    <string name="Toolbar_PHOTO" translatable="false">PHOTO</string>
    <string name="Toolbar_SAVE" translatable="false">SAVE</string>
    
    <!-- NAVIGATION DRAWER -->
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="Navigation_drawer_fmei_dashboard">FMEA DASHBOARD</string>
    <string name="Navigation_drawer_human_resources">HUMAN RESOURCES</string>
    <string name="Navigation_drawer_team_fmei">TEAM FMEA</string>
    <string name="Navigation_drawer_profile_section">PROFILE SECTION</string>
    <string name="Navigation_drawer_export_data">EXPORT DATAS</string>
    <string name="Navigation_drawer_settings">SETTINGS</string>
    <string name="Navigation_drawer_help">HELP</string>
    <string name="Navigation_drawer_about">ABOUT</string>

    <!-- BUTTON -->
    <string name="VALIDATE_Btn">VALIDATE</string>
    <string name="CANCEL_Btn">CANCEL</string>

    <!-- PHOTO VIEWPAGER -->
    <string name="photo_viewpager_save_and_quit">SAVE AND QUIT</string>
    <string name="photo_viewpager_send_to_the_trash">send to the trash</string>

    <!-- MAIN ACTIVITY -->
    <string name="touch_screen">PDCA Concept</string>

    <!-- FMEI DASHBOARD -->
    <string name="Fmei_dashboard_title">FMEA DASHBOARD</string>
    <string name="Fmei_dashboard_processus_number">PROCESSUS :</string>
    <string name="Fmei_dashboard_team_leader">LEADER :</string>
    <string name="Fmei_dashboard_participant_amount">PARTICIPANT :</string>
    <string name="Fmei_dashboard_risks_amount">RISKS :</string>
    <string name="Fmei_dashboard_risks_average">AVERAGE :</string>
    <string name="Fmei_dashboard_risk_max">MAX :</string>
    <string name="Fmei_dashboard_high_risk_amount">RISK HIGH :</string>
    <string name="Fmei_dashboard_medium_risk_amount">RISK MEDIUM :</string>
    <string name="Fmei_dashboard_low_risk_amount">RISK LOW :</string>
    <string name="Fmei_dashboard_snacbar_create">CREATE : </string>

    <!-- PROCESS DASHBOARD -->
    <string name="Process_dashboard_title">PROCESS</string>
    <string name="Process_dashboard_processus" translatable="false">PROCESSUS</string>
    <string name="Process_viewpager_close" translatable="false">X</string>
    <string name="Process_builder_title">PROCESSUS BUILDER</string>
    <string name="Process_builder_button_write_title">RENAME</string>
    <string name="writte_activity_advertising_first_paragraph">You want to RENAME processus step called</string>
    <string name="writte_activity_advertising_second_paragraph">by</string>
    <string name="writte_activity_editext_hint">New Name</string>

    <!-- RISK FILE -->
    <string name="Risk_file_description_title">RISK</string>
    <string name="Risk_file_corrective_action_title">CORRECTIVE ACTION</string>
    <string name="Risk_file_corrective_ask_btn">ASK CORRECTIVE ACTION RESULTS</string>
    <string name="Risk_file_corrective_default_score" translatable="false">10</string>
    <string name="Risk_file_corrective_detection">DETECTECTION</string>
    <string name="Risk_file_corrective_probability">PROBABILITY</string>
    <string name="Risk_file_corrective_severity">SEVERITY</string>
    <string name="Risk_file_corrective_default_ipr_score" translatable="false">1000</string>
    <string name="Risk_file_corrective_ipr_level">IPR LEVEL</string>
    <string name="Risk_file_corrective_root_cause">Root cause…</string>
    <string name="Risk_file_corrective_how_to_detect">How to detect…</string>
    <string name="Risk_file_corrective_effect">Effect…</string>
    <string name="Risk_file_corrective_failing_title">FAILING TITLE</string>
    <string name="Risk_file_corrective_part">PART</string>
    <string name="Risk_file_corrective_identification">Identification</string>
    <string name="Risk_file_corrective_processus_step">STEP</string>
    <string name="Risk_file_corrective_delete">DELETE</string>
    <string name="Risk_file_corrective_save">DATAS SAVED</string>
    <string name="activity_photo_modifier_validate">VALIDATE</string>
    <string name="activity_photo_modifier_cancel">CANCEL</string>
    <string name="activity_photo_modifier_advertising_photo_name">This title for this photo already exists</string>
    <string name="activity_photo_modifier_advertising_empty_edittext">Photo must have a title</string>
    <string name="activity_photo_modifier_advertising_forbidden_characteres">Forbidden characteres : / !</string>

    <!-- CORRECTIVE ACTION FILE -->
    <string name="Risk_file_corrective_corrective_title">CORRECTIVE ACTION TITLE</string>
    <string name="Risk_file_corrective_description">Description…</string>
    <string name="Risk_file_corrective_deadline_title">DEAD LINE</string>
    <string name="Risk_file_corrective_realisation_title">REALISATION DATE</string>
    <string name="Risk_file_corrective_realisation_default">TO DEFINE</string>
    <string name="Risk_file_corrective_advertising_photo">You must save your corrective action before</string>
    <string name="Risk_file_mail_subject_part_one">CORRECTIVE ACTION REQUEST about RISK</string>
    <string name="Risk_file_mail_message_line_one">FMEA</string>
    <string name="Risk_file_mail_message_line_two">IDENTIFIED RISK</string>
    <string name="Risk_file_mail_message_line_three">CORRECTIVE ACTION</string>
    <string name="Risk_file_mail_message_line_four">DEAD LINE :</string>
    <string name="Risk_file_mail_message_line_five">REALISATION DATE :</string>
    <string name="Risk_file_mail_message_line_six">relevant part</string>
    <string name="Risk_file_mail_message_line_seven">track number :</string>
    <string name="Risk_file_mail_message_line_height">part name :</string>
    <string name="Risk_file_mail_message_line_nine">description of the corrective action taken :</string>
    <string name="Risk_file_mail_message_line_ten">If necessary, put the photos as an attachment</string>

    <!-- TEAM FMEI -->
    <string name="team_fmei_dashboard_title">TEAM FMEA</string>
    <string name="team_fmei_builder_title">CONFIGURATION</string>
    <string name="team_fmei_builder_participant">PARTICIPANT</string>
    <string name="team_fmei_builder_still">participant (still</string>
    <string name="team_fmei_builder_advertising_team_leader_must_be_participant">TEAM LEADER must be a participant</string>

    <!-- PROFILE SECTION -->
    <string name="profile_section_title">PROFILE SECTION</string>
    <string name="profile_title">PROFILE</string>
    <string name="profile_section_name">NAME :</string>
    <string name="profile_section_forname_hint">Forname</string>
    <string name="profile_section_name_hint">Name</string>
    <string name="profile_section_function_hint">Job</string>
    <string name="profile_section_mail_hint" translatable="false">mail@business.com</string>
    <string name="profile_section_job">JOB :</string>
    <string name="profile_section_mail">MAIL :</string>
    <string name="profile_section_tel">TEL :</string>
    <string name="profile_section_default_forname" translatable="false">John</string>
    <string name="profile_section_default_name" translatable="false">DOE</string>
    <string name="profile_section_main_profile">MAIN PROFILE ACTIVATION</string>
    <string name="profile_section_profile_desactivation">HIDE PROFILE</string>
    <string name="profile_section_profile_reactivation">LOAD PROFILE</string>
    <string name="profile_section_team_leader_mention">TEAM LEADER</string>
    <string name="profile_section_fmea_participation_title">FMEA PARTICIPATION</string>
    <string name="profile_section_fmea">FMEA</string>
    <string name="profile_section_main_participant_advertising">Main user can\'t be desactivated</string>
    <string name="profile_section_new_main_user">is the new main user.</string>
    <string name="writte_profile_advertising_first_paragraph">You want to CHANGE this information</string>


    <!-- EXPORT DATAS -->
    <string name="Export_datas_title">EXPORT DATAS</string>
    <string name="Export_data_speech">Choice of fmea number to export :</string>
    <string name="Export_text_extension_explication">Press button for sending your csv file to the administrator email address</string>
    <string name="Export_data_csv_title_btn" translatable="false">*.csv</string>
    <string name="Export_Risk_name">POTENTIAL RISK NAME</string>
    <string name="Export_Risk_effect">POTENTIAL RISK EFFECT</string>
    <string name="Export_Risk_Date">DECLARATION DATE</string>
    <string name="Export_Risk_Root_cause">ROOT CAUSE</string>
    <string name="Export_verification_tool">VERIFICATION TOOL</string>
    <string name="Export_deadline">DEAD LINE</string>
    <string name="Export_action_realised">ACTION</string>
    <string name="Export_new_score">REALISATION DATE</string>
    <string name="Export_email_report_partsubject">FMEA report - </string>
    <string name="Export_email_report_part_body">See attached file for FMEA report about </string>

    <!-- SETTINGS -->
    <string name="Settings_title">SETTINGS</string>
    <string name="Settings_logo">LOGO</string>
    <string name="Settings_business_title">NAME OF BUSINESS :</string>
    <string name="Settings_business_hint">My business</string>
    <string name="Settings_score_ladder">SCORE LADDER</string>
    <string name="Settings_score_low">LOW</string>
    <string name="Settings_score_medium">MEDIUM</string>
    <string name="Settings_score_high">HIGH</string>

    <!-- HELP -->
    <string name="Help_title">HELP</string>

    <!-- ABOUT -->
    <string name="About_title" translatable="false">FMEI MANAGER : v 1.0.0 \nbuilt : 2019/25/05 \nPowered with Android studio for : \nAndroid 4.4 and higher \n\ncreated by FLT Starcraft</string>
    <string name="About_btn">CLOSE</string>


</resources>
