<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/drawer_item_fmei_dashboard"
            android:icon="@mipmap/baseline_chrome_reader_mode_white_24"
            android:title="@string/Navigation_drawer_fmei_dashboard" />
        <item
            android:id="@+id/drawer_item_team_fmei"
            android:icon="@mipmap/baseline_group_white_24"
            android:title="@string/Navigation_drawer_team_fmei" />
        <item
            android:id="@+id/drawer_item_export_datas"
            android:icon="@mipmap/baseline_get_app_white_24"
            android:title="@string/Navigation_drawer_export_data" />
        <item
            android:id="@+id/drawer_item_settings"
            android:icon="@mipmap/baseline_settings_applications_white_24"
            android:title="@string/Navigation_drawer_settings" />
        <item
            android:id="@+id/drawer_item_help"
            android:icon="@mipmap/baseline_help_white_24"
            android:title="@string/Navigation_drawer_help" />
        <item
            android:id="@+id/drawer_item_about"
            android:icon="@mipmap/baseline_comment_white_24"
            android:title="@string/Navigation_drawer_about" />
    </group>

</menu>